syntax = "proto3";

package org.project_planton.provider.gcp.gcpcertmanagercert.v1;

import "buf/validate/validate.proto";
import "org/project-planton/provider/gcp/gcpcertmanagercert/v1/spec.proto";
import "org/project-planton/provider/gcp/gcpcertmanagercert/v1/stack_outputs.proto";
import "org/project-planton/shared/metadata.proto";

//gcp-cert-manager-cert
message GcpCertManagerCert {
  //api-version
  string api_version = 1 [(buf.validate.field).string.const = 'gcp.project-planton.org/v1'];

  //resource-kind
  string kind = 2 [(buf.validate.field).string.const = 'GcpCertManagerCert'];

  //metadata
  org.project_planton.shared.CloudResourceMetadata metadata = 3 [(buf.validate.field).required = true];

  //spec
  GcpCertManagerCertSpec spec = 4 [(buf.validate.field).required = true];

  //status
  GcpCertManagerCertStatus status = 5;
}

//gcp-cert-manager-cert status
message GcpCertManagerCertStatus {
  //stack-outputs
  GcpCertManagerCertStackOutputs outputs = 1;
}
